Bug 776793: Properly create an opaque surface when copying in the background. r=joedrew